2021-11-26  Paul Seyfert  <Paul.Seyfert@sevensense.ch>

	* github #83: Completion/Unix/Command/_git: _git-push,
	_git-send-pack: Make --push-option repeatable.

2021-11-26  Daniel Shahaf  <d.s@daniel.shahaf.name>

	* 49448: Doc/Zsh/contrib.yo, Doc/Zsh/zle.yo: docs: Fix pointers
	to the `Widgets', `User-defined Widgets', and `Standard Widgets'
	sections.

	* 49447: Doc/Zsh/compsys.yo: docs: _wanted: Clarify the example
	and point to another one.

	* 49446: Doc/Zsh/expn.yo: docs: Add texinode()s, so the next
	commit can link directly to a subsection.

	* 49445: Doc/Zsh/calsys.yo, Doc/Zsh/contrib.yo, Doc/Zsh/expn.yo,
	Doc/Zsh/intro.yo, Doc/Zsh/jobs.yo, Doc/Zsh/mod_newuser.yo,
	Doc/Zsh/options.yo, Doc/Zsh/params.yo, Doc/Zsh/roadmap.yo,
	Doc/Zsh/zle.yo: docs: Clean up some subsection references.

	* 49449: Completion/Unix/Command/_stat: _zstat: Don't offer -o
	after -s, since -s is ignored when both -s and -o are specified.

	* 47599 (tweaked): New test for '{foo,bar}' in command position

2021-11-24  Oliver Kiddle  <opk@zsh.org>

	* 49597: Completion/Base/Core/_description, Doc/Zsh/compsys.yo,
	Completion/Base/Utility/_numbers, Completion/BSD/Command/_ipfw,
	Completion/Linux/Command/_btrfs, Completion/Unix/Command/_dd,
	Completion/Unix/Command/_git, Completion/Unix/Command/_head,
	Completion/Unix/Command/_killall, Completion/Unix/Command/_pv,
	Completion/Unix/Command/_rclone, Completion/Unix/Command/_rsync,
	Completion/Unix/Command/_stdbuf, Completion/Unix/Command/_tail,
	Completion/Unix/Command/_timeout, Completion/Unix/Command/_zfs,
	Completion/X/Command/_xset: add a helper for completing numbers
	with unit suffixes and separate out defaults, ranges and units
	in completion descriptions

2021-11-22  Jun-ichi Takimoto  <takimoto-j@kba.biglobe.ne.jp>

	* 49586: Src/hist.c: fix :a and :A modifiers (with PWD="/") on
	Cygwin

2021-11-19  Oliver Kiddle  <opk@zsh.org>

	* 49594: Completion/Unix/Command/_chmod: adapt to changes in 49499